# translation-difficulty-estimation

./: .gitignore  README.md  pyproject.toml
difficulty_estimation/: DiffCorrTasks.py  __init__.py  data.py  evaluate.py
difficulty_sampling/: DiffCorrTasks.py  __init__.py  data.py  evaluate.py  utils.py
experiments/: 01-eval_all.py  02-artificial_crowd_single.py  03-effect-diversity.py  03-post_effect.py  03-post_effect_wmt25.py  04-variable_budget.py  05-post_effect_src_diversity.py  05-post_effect_src_diversity_wmt25.py  05-source_diversity.py  06-eval_some.py  07-perlang_distribution_wmt24.py  sentinel_tgt_lang_dependence.py  subsample.py  translate.py  translation_scores_across_sys.py
experiments/analysis/: diachronic_saturation.py  error_spans.py  errors.py  inspect_features.py  perlang_distribution_wmt24.py  perlang_saturation_wmt24.py  translation_difficulty_across_tgt_langs.py
experiments/llm_as_a_judge/: main.py
experiments/sentinel/: subsampling.py
experiments/subsampling/: average_word_frequency.py  misc.py  negative_word_frequency.py  plot.py  sentinel.py  syntactic_complexity.py  word_frequency.py
experiments/test/: 01-example.py  02-basic_plots.py
experiments/translating/: __init__.py  translation.py  utils.py
experiments/translation/: __init__.py  score_with_metrics.py  utils.py
experiments/translation/models/: command_a.py  gemma3.py  nllb.py  qwen.py
experiments/vilem/: 02-basic_plots.py
