[build-system]
requires = ["setuptools >= 65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["difficulty_sampling"]

[project]
name = "difficulty-sampling"
version = "0.0.0"
requires-python = ">=3.11"
authors = []
dependencies = [
  "numpy",
  "pandas",
  "sacrebleu",
  "datasets",
  "scikit-learn",
  "tqdm",
  "matplotlib",
  "requests",
  "sentence-transformers",
  "unbabel_comet",
  "subset2evaluate >= 1.0.10",
  "gliner",
  "wordfreq",
  "spacy >= 3.8.4",
  "seaborn",
  "transformers @ git+https://github.com/huggingface/transformers@v4.49.0-Gemma-3",
  "accelerate",
  "sudachipy",
  "sudachidict-core",
  "mecab-python3",
  "ipadic", # These last four dependencies are needed for the Japanese tokenizer.
  "spacy-udpipe", # This instead is needed for the UDPipe tokenizer (Czech).
]
classifiers = [
  # prevents upload to PyPi
  "Private :: Do Not Upload"
]

[project.urls]
Repository = "https://github.com/zouharvi/difficulty-sampling"

# pip install -e .
